implement API for creating workflows

--- a/slack_workflow_app/static/main.css
+++ b/slack_workflow_app/static/main.css
@@ -32,37 +32,37 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 20px;
 }
 
-.project-title {
+.article-title {
   color: #444444;
 }
 
-a.project-title:hover {
+a.article-title:hover {
   color: #428bca;
   text-decoration: none;
 }
 
-.project-content {
+.article-content {
   white-space: pre-line;
 }
 
-.project-img {
+.article-img {
   height: 65px;
   width: 65px;
   margin-right: 16px;
 }
 
-.project-metadata {
+.article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
   border-bottom: 1px solid #e3e3e3
 }
 
-.project-metadata a:hover {
+.article-metadata a:hover {
   color: #333;
   text-decoration: none;
 }
 
-.project-svg {
+.article-svg {
   width: 25px;
   height: 25px;
   vertical-align: middle;
