--- a/slack_workflow_app/templates/home/home.html
+++ b/slack_workflow_app/templates/home/home.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
     {% for post in posts %}
-        <project class="media content-section">
+        <article class="media content-section">
           <div class="media-body">
-            <div class="project-metadata">
+            <div class="article-metadata">
               <a class="mr-2" href="#">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted }}</small>
             </div>
-            <h2><a class="project-title" href="#">{{ post.title }}</a></h2>
-            <p class="project-content">{{ post.content }}</p>
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
           </div>
-        </project>
+        </article>
     {% endfor %}
 {% endblock content %}
