--- a/slack_workflow_app/templates/layout.html
+++ b/slack_workflow_app/templates/layout.html
@@ -35,6 +35,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('add_message') }}">Add Message</a>
+                <a class="nav-item nav-link" href="{{ url_for('add_workspace') }}">Add Workspace</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
